Closed
Bug 434528
Opened 17 years ago
Closed 17 years ago
hangs high cpu attempting to delete an AB entry
Categories
(MailNews Core :: Address Book, defect)
MailNews Core
Address Book
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9
People
(Reporter: wsmwk, Assigned: standard8)
References
Details
(Keywords: hang, regression)
Attachments
(1 file)
|
1.25 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
version 3.0a2pre (2008051603)
starting point:
two AB entries for same person I'll call larry1 and larry2, in address book I'll call ABwork. I wanted to get down to just one, with all the information of both. both have same email address. larry1 iirc was lacking the last name in both the display name and last name fields.
1. start in ABwork
2. quick searched on part of name such that both AB entries are in search results
3. alternate editing larry1 and larry2 so that I can transfer all the info to larry2
4. go to delete larry1 - hang
- I was able to delete other ab entries in other ABs
- twice start and attempt to reproduce, i.e. search ABwork for "larry", attempt to delete larry1 - hang
- 4th restart, this time delete some other entry in ABwork - OK. delete larry1 works (don't recall if I had done that from quick search results or not)
I have the .mab file from before I successfully deleted larry1. Did not attempt to recreate problem further by going back to the "original file".
| Reporter | ||
Comment 1•17 years ago
|
||
correction - I was keeping larry2 - larry2 (not larry1) was lacking the last name in both the display name and last name fields. As a result, before editting it appears first in the search results. After copying last name into larry2's display and ln fields, larry2 now appears second, with larry1 first.
| Assignee | ||
Updated•17 years ago
|
| Assignee | ||
Comment 2•17 years ago
|
||
Counting down with unsigned ints in a for loop is never a good idea.
This was new code added in bug 406921, I don't see any special reason to count down here.
Assignee: nobody → bugzilla
Status: NEW → ASSIGNED
Attachment #321652 -
Flags: superreview?(bienvenu)
Attachment #321652 -
Flags: review?(bienvenu)
| Reporter | ||
Updated•17 years ago
|
Comment 3•17 years ago
|
||
Comment on attachment 321652 [details] [diff] [review]
The fix
heh.
Attachment #321652 -
Flags: superreview?(bienvenu)
Attachment #321652 -
Flags: superreview+
Attachment #321652 -
Flags: review?(bienvenu)
Attachment #321652 -
Flags: review+
| Assignee | ||
Comment 4•17 years ago
|
||
Patch checked in -> fixed.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
OS: Windows XP → All
Hardware: PC → All
Target Milestone: --- → mozilla1.9
| Reporter | ||
Comment 5•17 years ago
|
||
version 3.0a2pre (2008052103) doesn't hang ...
but now it won't delete contact from quick search results.
delete works when quick search window is cleared
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 6•17 years ago
|
||
(In reply to comment #5)
> version 3.0a2pre (2008052103) doesn't hang ...
>
> but now it won't delete contact from quick search results.
> delete works when quick search window is cleared
>
It will, we just don't remove it from the display :-(
Please can we deal with that in a different bug, I suspect its a different regression from this one.
Status: REOPENED → RESOLVED
Closed: 17 years ago → 17 years ago
Resolution: --- → FIXED
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•