Bug 434528 hangs high cpu attempting to delete an AB entry, regression from bug 406921. r/sr=bienvenu